# SILENTMOON

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
includes/: eneio64.hpp  pte.hpp  sdk.hpp  vdm.hpp  vulnerable_driver.hpp
scripts/: load_driver.bat  start_driver.bat  stop_driver.bat  unload_driver.bat
src/: eneio64.cpp  vdm.cpp
